# gforce-data

./: CMakeLists.txt  main.cpp
inc/: DeviceSetting.h
scripts/: copy_dlls_script.cmake.in
src/: SerialDetect.cpp  SerialDetect.h  stdafx.cpp  stdafx.h
